<resources>
    <string name="app_name">player</string>
    <string name="textoInicial">Bienvenido.\n\nHa sido agraciado con una invitación para participar en una velada en la que nada es lo que parece y todo puede ocurrir.\n\nPara confirmar su asistencia</string>
    <string name="codeHint">introduzca la clave secreta</string>
    <string name="permission">Necesitamos usar la cámara para poder encontrar pistas.\nA continuación el sistema te pedirá permiso para usarla.\nAcepta para poder buscar las pistas.</string>
    <string name="continuar">Continuar</string>
    <string name="salir">salir</string>
    <string name="ideas">\nIDEAS DE INDUMENTARIA</string>
    <string name="clavesComportamiento">\nCLAVES EN TU COMPORTAMIENTO</string>
    <string name="tarea">\nTAREA A DAR AL RESTO DE JUGADORES</string>
    <string name="tituloPersonajeGreen">EL SEÑOR GREEN, EL HIJO</string>
    <string name="textoPersonajeGreen">Tu cabeza está a punto de estallar. Tu madre está harta de las infidelidades de tu padre y de sus problemas con el juego. Así que en un ataque de ira, te cuenta que el Señor White no es en realidad tu padre.  Y en ese instante, muchos momentos traumáticos de tu vida comienzan a tener sentido. Esas miradas desafiantes, ese desprecio de tu propio padre a todos tus logros, esa infancia en los internados más alejados de Inglaterra. Todo cobra sentido para tí. Crees que él lo sabía, o al menos lo sospechaba.\n\nAsí que tienes la certeza de que esta invitación a esta velada tan extraña, es la ocasión perfecta para que el maldito Señor White te desherede, anunciándote como el fruto de una infidelidad de tu madre, y la oportunidad perfecta de deshacerse tanto de ti como de tu madre. Y eso no lo vas a permitir. Has aguantado una vida de maltrato y desprecio para que ahora tanto tú como tu madre terminéis en la calle.</string>
    <string name="indumentariaPersonajeGreen">Debes llevar alguna prenda de color verde (por ejemplo, pañuelo en el pecho, camisa, chaqueta), de modo que el resto de jugadores pueda verla claramente e identificarte rápidamente.</string>
    <string name="comportamientoPersonajeGreen">Eres un joven rico resentido con tu padre por una vida de maltrato y vejaciones. Además acabas de descubrir que no es tu verdadero padre y que es muy posible que te desherede esta noche. Por lo que tendrás una relación tensa con el Señor White, cercana con la Señora White y de nerviosismo con el Señor Brown (tu verdadero padre). Intentarás estar al lado de la Señora White durante la cena.</string>
    <string name="tareaPersonajeGreen">Necesitas desesperadamente que el testamento actual desaparezca, por lo que pides a los invitados que busquen en el mismo y que te lo entreguen. Sabes que el Señor White no guardaría un documento tan personal e importante en su despacho junto al resto de documentos. Si te entregan el testamento, les darás la información.</string>
    <string name="tituloPersonajeBrown">EL DOCTOR BROWN, EL DOCTOR DE LA FAMILIA</string>
    <string name="textoPersonajeBrown">Seguiste los pasos de tu padre como doctor en la casa de los White cuando él murió, y eres algo mayor que el Señor White. Llevas toda una vida presenciando las infidelidades del Señor White a su esposa, de la cual siempre estuviste enamorado. Por eso, en un momento de pasión y juventud, ya hace más de 25 años, sedujiste a la Señora White y fruto de esa noche de pasión, nació un niño, el cual decidiste ver crecer en en la sombra y guardando el secreto durante tantos años, mientras mantenías una relación secreta con la Señora White.\n\nPero ahora crees que el Señor White sabe con certeza que tú eres el padre de su hijo, y que es la ocasión perfecta para desheredarlo y echarlos tanto a él como a su madre de la mansión, y quedarse con toda la fortuna de los White.</string>
    <string name="indumentariaPersonajeBrown">Debes llevar alguna prenda de color marrón (camisa, corbata, americana) que se vea claramente y que permita diferenciar rápidamente quien eres al resto de jugadores.</string>
    <string name="comportamientoPersonajeBrown">Tienes una relación cercana con la Señora White y de preocupación por su salud, pero temes que el Señor White se de cuenta. También intentarás defender al Señor Green siempre que puedas de los continuos ataques del Señor White, pero de manera sosegada, intentando calmar los ánimos. Intentarás estar al lado de la Señora White durante la cena.</string>
    <string name="tareaPersonajeBrown">Como médico de la familia sabes perfectamente que en el libro de familia hay suficientes indicios para alguien un poco perspicaz de que la firma que hay en la inscripción del Señor Green está falsificada. Necesitas que alguien te traiga ese documento. Crees que debe estar en el despacho. Si te lo traen, les darás la información. Nadie debe enterarse.</string>
    <string name="tituloPersonajeGolden">EL SEÑOR GOLDEN, EL ALCALDE</string>
    <string name="textoPersonajeGolden">No eras nadie cuando te metiste en esto de la política, ni siquiera pertenecías a una familia adinerada. Pero te supiste mover entre los círculos de la aristocracia mientras eras joven, aparentando ser algo que no eras, una persona con principios. Y el Señor White se dio cuenta. Por eso, desde un principio, impulsó tu carrera política, aportando grandes sumas de dinero hasta que llegaste años más tarde a la alcaldía de una importante ciudad. Pero eso fue tu perdición.\n\nLlevas 20 años ocultando los negocios turbios del Señor White, dándole licencias de construcción en terrenos públicos y ocultando el impago de impuestos del entramado de empresas del Señor White.\n\nAhora hay un nuevo candidato a la alcaldía, y es exactamente igual que tú cuando eras joven. Y sabes que el Señor White lleva un tiempo en conversaciones en la sombra con este nuevo candidato. No estás dispuesto a que estos 20 años de corrupción acaben con tu carrera y que el Señor White tire de la manta para apoyar al nuevo candidato y que éste oculte sus delitos.</string>
    <string name="indumentariaPersonajeGolden">Debes llevar un distintivo dorado (un colgante, un medallón, un broche) de manera que se vea claramente por los demás jugadores (te recomendamos que lo coloques en el pecho) y puedan identificarte rápidamente.</string>
    <string name="comportamientoPersonajeGolden">Estas muy nervioso con cada comentario del Señor White y darás muestras de preocupación tanto por los ataques contra tí como con los ataques contra el Señor Navy. Entablarás continuas conversaciones con el Señor Navy, ya que ambos estáis juntos por vuestros intereses en que el Señor White no destape vuestros negocios turbios y te sustituya por otro alcalde más joven. Intentaréis estar uno al lado del otro durante la cena.</string>
    <string name="tareaPersonajeGolden">Necesitas saber cual es el nombre del candidato al que apoya el Señor White. Quizás de esa manera puedas boicotear su campaña lo suficientemente rápido como para obligar a Señor White a volver a apoyarte. Necesitas la agenda negra del Señor White, la misma en la que anota los números de sus contactos más turbios y que tú también compartes. Sabes que no estará ni en el despacho ni en su dormitorio, es una información demasiado sensible como para mezclarla con trabajo o cuestiones personales. Si te la entregan, les darás la información.</string>
    <string name="tituloPersonajeNavy">EL SEÑOR NAVY, EMPRESARIO CON NEGOCIOS DE DUDOSA LEGALIDAD</string>
    <string name="textoPersonajeNavy">Llevas más de 30 años forjando tu imperio al margen de la ley con negocios como el contrabando de alcohol, prostitución, apuestas ilegales y todo aquello que puede darte dinero rápidamente. Eres una persona sin escrúpulos que se ha sabido rodear de gente poderosa y durante este tiempo has sabido meterte en el bolsillo al actual alcalde, el Señor Golden, quien te debe más de la mitad de su fortuna gracias a estos años de turbios negocios.\n\nDurante estos últimos años el Señor White se ha acostumbrado a no pagar sus grandes deudas en tus diferentes empresas, especialmente en tus casinos; ascendiendo la deuda a más de un millón de libras esterlinas. Han llegado a tus oídos rumores sobre la intención del Señor White de apoyar a un nuevo candidato para la alcaldía, y sabes lo que eso supondrá para ti. Tienes la certeza de que un nuevo alcalde supondrá hacer limpieza en la ciudad y que todos estos años comprando al actual alcalde habrán sido una mala inversión.\n\nAsí que das por perdido el dinero que te debe el Señor White; y pensando en tu futuro, sabes exactamente cuál es la solución. El Señor White debe desaparecer.</string>
    <string name="indumentariaPersonajeNavy">Debes llevar una prenda de color azul marino (fular, pañuelo, americana) que se vea claramente y que permita diferenciar rápidamente quien eres al resto de jugadores.</string>
    <string name="comportamientoPersonajeNavy">Estás realmente furioso con el comportamiento del Señor White y es él el que debería tenerte miedo a tí y no la revés. Eres una persona violenta y debes dejarlo claro, aunque debes intentar guardar las apariencias, por mucho que te cueste. Debes intentar sentarte al lado del Señor Golden, ya que os conocéis y os interesa que el Señor White desaparezca antes de que se anuncie su apoyo al nuevo candidato a la alcaldía.</string>
    <string name="tareaPersonajeNavy">Hace unos años le regalaste al Señor White una pistola en la que están tus huellas. Sabes que no ha sido usada para matarlo, pero no quieres que la policía haga preguntas sobre su origen. Está metida en una caja de madera con sus iniciales grabadas en oro. Sabes que es una persona desconfiada, así que piensas que debe tener a mano en su dormitorio. Si te entregan la caja sin abrirla, les darás la información.</string>
    <string name="tituloPersonajeGray">LA SEÑORA GRAY, LA SOCIA INVERSORA</string>
    <string name="textoPersonajeGray">Eres una de las personas más y mejor preparadas para los negocios, y actualmente eres una de las ejecutivas más agresivas de una de las corporaciones más importantes del país. Y justo en el momento de mayor estrés profesional, tu madre, en su lecho de muerte, te confiesa tu verdadero origen: Nada más nacer, tu verdadera madre te abandonó en la puerta de su casa, sabiendo que allí recibirías una vida mucho mejor de la que ella podría darte.\n\nTu madre te acogió como hija propia debido a que llevaban muchos años deseando tener hijos y cuando ya lo daba todo por perdido, una noche de tormenta, una antigua sirvienta, aún muy joven, llamó a su puerta y le entregó a su propia hija. Sabes que tu verdadera madre es la Señora Black y trabaja actualmente en la Mansión de los White. Tras pagar a uno de los mejores investigadores del país, averiguas quién es tu verdadero padre: el Señor White. Él obligó a tu madre a abandonarte si quería mantener su trabajo en la mansión. Él utilizó a tu madre cuando sólo era una joven sirvienta y truncó vuestras vidas.\n\nAhora, aprovechándome de tu posición actual y dándote a conocer como una socia inversora, tienes la intención de llevar a la familia White a la quiebra; vengándote así de una vida de mentiras y engaños.</string>
    <string name="indumentariaPersonajeGray">Debes llevar un complemento plateado (broche grande, collar) que se vea claramente y que permita diferenciar rápidamente quien eres al resto de jugadores.</string>
</resources>