<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="false"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/tile"
        android:scaleType="fitXY" />
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="false"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/sombra"
            android:scaleType="fitXY" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="60dp"
                android:orientation="vertical"

                >
                <ImageView
                    android:id="@+id/imagenPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/green"/>

                <TextView
                    android:id="@+id/tituloPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/tituloPersonajeGreen"
                    android:textColor="@color/textColor"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/descripcionPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/textoPersonajeGreen"
                    android:textColor="@color/textColor"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/indumentaria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/ideas"
                    android:textColor="@color/textColor"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/indumentariaPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/indumentariaPersonajeGreen"
                    android:textColor="@color/textColor"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/comportamiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/clavesComportamiento"
                    android:textColor="@color/textColor"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/comportamientoPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/comportamientoPersonajeGreen"
                    android:textColor="@color/textColor"
                    android:textSize="24dp"/>
                <TextView
                    android:id="@+id/tarea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/tarea"
                    android:textColor="@color/textColor"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/tareaPersonaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:shadowColor="#000000"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/tareaPersonajeGreen"
                    android:textColor="@color/textColor"
                    android:textSize="24dp"/>

            </LinearLayout>

        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_margin="3dp"
                android:orientation="horizontal">

            </LinearLayout>
            <ImageView
                android:id="@+id/volver"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="4dp"
                app:srcCompat="@drawable/volver"/>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_margin="3dp"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</FrameLayout>